--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-# version: '0.5'
+version: '0.5'
 
 services:
   sbc_frontend:
@@ -22,13 +22,15 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - sbc_postgres
-    #- mongo
+      sbc_postgres:
+        condition: service_healthy
     environment:
-      - DATABASE_URL=postgresql://user:password@postgres:5432/creditScoreDB
+      - DATABASE_URL=postgresql://user:password@sbc_postgres:5432/creditScoreDB
       # - MONGO_URL=mongodb://mongo:27017/mydatabase
     volumes:
       - ./backend:/app
+    #command: >
+    #  sh -c "uvicorn main:app --host 0.0.0.0 --port 8000"
 
   sbc_postgres:
     image: postgres:15
@@ -40,6 +42,10 @@ services:
       POSTGRES_DB: creditScoreDB
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "user"]
+      interval: 5s
+      retries: 5
 
 #  mongo:
 #    image: mongo:6
